# onemkl

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  default_6693764832502848637_0_24080.profraw
.github/workflows/: ci.yml
onemkl/: Cargo.toml  README.md
onemkl-sys/: Cargo.toml  README.md  build.rs
onemkl-sys/src/: lib.rs
onemkl-sys/tests/: smoke.rs
onemkl/examples/: fft_signal.rs  quantized_inference.rs  solve_linear_system.rs  sparse_cg.rs  transformer_qkv_projection.rs
onemkl/src/: data_fitting.rs  dss.rs  enums.rs  error.rs  feast.rs  fft.rs  iss.rs  lib.rs  matrix.rs  optim.rs  pardiso.rs  pde.rs  preconditioners.rs  scalar.rs  service.rs  util.rs
onemkl/src/blas/: compact.rs  extensions.rs  jit.rs  level1.rs  level2.rs  level3.rs  mixed_precision.rs  mod.rs  packed.rs  scalar.rs
onemkl/src/lapack/: mod.rs  scalar.rs
onemkl/src/rng/: convolution.rs  mod.rs  summary_stats.rs
onemkl/src/sparse/: mod.rs  scalar.rs
onemkl/src/vm/: mod.rs  scalar.rs
onemkl/tests/: blas_batched.rs  blas_compact.rs  blas_extensions.rs  blas_gemm_batch.rs  blas_gemv_trsm_batch.rs  blas_jit.rs  blas_level1.rs  blas_level2_3.rs  blas_level2_extended.rs  blas_level3_extended.rs  blas_mixed_precision.rs  blas_packed.rs  data_fitting.rs  data_fitting_splines.rs  dss.rs  feast.rs  feast_extras.rs  fft.rs  fft_scaling.rs  iss.rs  iss_rci.rs  lapack.rs  lapack_auxiliary.rs  lapack_banded.rs  lapack_generalized.rs  lapack_packed.rs  lapack_rrr.rs  optim.rs  pardiso.rs  pde_trig.rs  preconditioners.rs  prelude_smoke.rs  rng.rs  rng_convolution.rs  rng_summary_stats.rs  service.rs  sparse.rs  sparse_arithmetic.rs  sparse_convert.rs  sparse_formats.rs  (+3 more)
